# gnn-tuto

./: .gitignore  Justfile  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  template.py
src/: dataset.py  gnn.py  trainer.py
tests/: test_dataset.py
